[gd_scene format=3 uid="uid://b3rk74tpc32bf"]

[ext_resource type="Script" uid="uid://bojr22ulo6ml0" path="res://scripts/player.gd" id="1_merdl"]
[ext_resource type="Texture2D" uid="uid://bc46q5y30cpuk" path="res://sprites/player/Idle (16 x 16).png" id="2_b0kkn"]
[ext_resource type="Texture2D" uid="uid://dvislhrg2vqhi" path="res://sprites/player/Ducking (16 x 16).png" id="2_qly61"]
[ext_resource type="Texture2D" uid="uid://0jrcmpejxxxt" path="res://sprites/player/Waddling (16 x 16).png" id="3_e4p34"]
[ext_resource type="Texture2D" uid="uid://d3p4jsgbg5v3v" path="res://sprites/player/Hurt (16 x 16).png" id="3_ef06p"]
[ext_resource type="Texture2D" uid="uid://d33t6raw1dktv" path="res://sprites/player/Falling (16 x 16).png" id="3_qsoyl"]
[ext_resource type="Texture2D" uid="uid://by1ib4rtws820" path="res://sprites/player/Jump (16 x 16).png" id="3_rfe5m"]
[ext_resource type="Texture2D" uid="uid://dypldumt76ed4" path="res://sprites/player/Lying_On_Ground (16 x 16).png" id="4_tjdhl"]
[ext_resource type="Texture2D" uid="uid://b2kvfhv26ohef" path="res://sprites/player/Belly_Sliding (16 x 16).png" id="6_6nm46"]
[ext_resource type="Texture2D" uid="uid://s0cjhi567ykt" path="res://sprites/player/Swimming (16 x 16).png" id="9_x08pd"]
[ext_resource type="Texture2D" uid="uid://dpcmxo55j02t6" path="res://sprites/player/Wall_Slide (16x16).png" id="10_tjdhl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_e4p34"]
atlas = ExtResource("2_b0kkn")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfe5m"]
atlas = ExtResource("2_b0kkn")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qly61"]
atlas = ExtResource("2_b0kkn")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsoyl"]
atlas = ExtResource("2_b0kkn")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nm46"]
atlas = ExtResource("2_b0kkn")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0i8f"]
atlas = ExtResource("3_rfe5m")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0i614"]
atlas = ExtResource("6_6nm46")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprnr"]
atlas = ExtResource("6_6nm46")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rie4"]
atlas = ExtResource("6_6nm46")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cicqb"]
atlas = ExtResource("9_x08pd")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hj0ki"]
atlas = ExtResource("9_x08pd")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fruft"]
atlas = ExtResource("9_x08pd")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i623q"]
atlas = ExtResource("3_e4p34")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef06p"]
atlas = ExtResource("3_e4p34")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjdhl"]
atlas = ExtResource("3_e4p34")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x08pd"]
atlas = ExtResource("3_e4p34")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dchgp"]
atlas = ExtResource("3_e4p34")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdgjc"]
atlas = ExtResource("3_e4p34")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dp3pk"]
atlas = ExtResource("10_tjdhl")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgp7q"]
atlas = ExtResource("10_tjdhl")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1n8aq"]
atlas = ExtResource("10_tjdhl")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_28s6d"]
atlas = ExtResource("10_tjdhl")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_i623q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_qly61")
}],
"loop": false,
"name": &"crouch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_qsoyl")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ef06p")
}, {
"duration": 1.0,
"texture": ExtResource("4_tjdhl")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4p34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfe5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qly61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsoyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nm46")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0i8f")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0i614")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rie4")
}],
"loop": true,
"name": &"slide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cicqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hj0ki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fruft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hj0ki")
}],
"loop": true,
"name": &"swimming",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i623q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef06p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjdhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x08pd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dchgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdgjc")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp3pk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgp7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1n8aq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28s6d")
}],
"loop": true,
"name": &"wall",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u3f3p"]
size = Vector2(10, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6nm46"]
size = Vector2(10, 15)

[node name="player" type="CharacterBody2D" unique_id=2033644194 groups=["g-player"]]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_merdl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=215828791]
z_index = 1
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_i623q")
animation = &"swimming"
frame = 1
frame_progress = 0.9690734

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=633640800]
visible = false
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_u3f3p")

[node name="Area2D-hitbox" type="Area2D" parent="." unique_id=1593469577]
collision_layer = 2
collision_mask = 52

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D-hitbox" unique_id=425493509]
visible = false
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_6nm46")
debug_color = Color(0.9055485, 0.26584044, 0.39079258, 0.41960785)

[node name="Timer-reload" type="Timer" parent="." unique_id=2076244437]
wait_time = 0.5
one_shot = true

[node name="RayCast2D-LeftWallDetector" type="RayCast2D" parent="." unique_id=1574513825]
visible = false
z_index = 10
target_position = Vector2(-7, 0)

[node name="RayCast2D-RightWallDetector" type="RayCast2D" parent="." unique_id=732111624]
visible = false
z_index = 10
target_position = Vector2(7, 0)

[connection signal="area_entered" from="Area2D-hitbox" to="." method="_on_area_2_dhitbox_area_entered"]
[connection signal="body_entered" from="Area2D-hitbox" to="." method="_on_area_2_dhitbox_body_entered"]
[connection signal="body_exited" from="Area2D-hitbox" to="." method="_on_area_2_dhitbox_body_exited"]
[connection signal="timeout" from="Timer-reload" to="." method="_on_timerreload_timeout"]
